mern-app/templates/ingress-node-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-path
  annotations:
    nnginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: public.my-services.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-service
            port:
              number: 3500
---
